# mvcapi-sdk-rust

./: .gitignore  .openapi-generator-ignore  Cargo.toml  README.md  openapi-generator.json  openapi.yaml
.openapi-generator/: FILES
docs/: AddressApi.md  AddressBalance.md  AddressTx.md  AddressUtxo.md  AsyncBroadcastResult.md  BatchBroadcastResult.md  BlockApi.md  BlockHeaderIndex.md  BlockHeaderPage.md  BlockTx.md  BlockchainInfo.md  BroadcastResult.md  ClientPubkeyRequest.md  ClientPubkeyResult.md  ContractApi.md  ContractFtAddressTx.md  ContractFtBalance.md  ContractFtGenesisCirculation.md  ContractFtUtxo.md  ContractNftAddressSummary.md  ContractNftAuctionUtxo.md  ContractNftGenesisSummary.md  ContractNftSellUtxo.md  ContractNftSellV2Utxo.md  ContractNftUtxo.md  ContractUniqueUtxo.md  ErrorResponse.md  InvalidBroadCast.md  InvalidBroadcastCollide.md  MerchantApi.md  OutpointApi.md  OutputInfo.md  OutputInfoDetail.md  TreasuryApi.md  TreasuryHistory.md  TreasuryInfo.md  TxApi.md  TxDetail.md  TxInput.md  TxOutput.md  (+11 more)
src/apis/: address_api.rs  block_api.rs  configuration.rs  contract_api.rs  merchant_api.rs  mod.rs  outpoint_api.rs  treasury_api.rs  tx_api.rs  xpub_api.rs
src/models/: address_balance.rs  address_tx.rs  address_utxo.rs  async_broadcast_result.rs  batch_broadcast_result.rs  block_header_index.rs  block_header_page.rs  block_tx.rs  blockchain_info.rs  broadcast_result.rs  client_pubkey_request.rs  client_pubkey_result.rs  contract_ft_address_tx.rs  contract_ft_balance.rs  contract_ft_genesis_circulation.rs  contract_ft_utxo.rs  contract_nft_utxo.rs  (+27 more)
