[package]
name = "mvcapi"
version = "3.0.11"
authors = ["MVCLabs"]
edition = "2021"
description = "The Client Implementation for MVCApi."
license = "MIT"
repository = "https://github.com/mvc-labs/mvcapi-sdk-rust"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
